--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@
   --links-color: #4E529A;
   --success-color: #5cb85c;
   --transparent: transparent;
+  --backdrop-color: rgba(0, 0, 0, 0.4);
 
   --xs-font-size: 11px;
   --xs-font-size: 12px;
