fix: modal positioning

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -527,3 +527,12 @@ body.dark {
     }
   }
 }
+
+.modal-container {
+  &.center {
+    display: flex;
+    // position: fixed;
+    align-items: center;
+    justify-content: center;
+  }
+}
