--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -136,8 +136,10 @@
   }
 
   &.error {
+    left: 50%;
     min-height: 135px;
     padding-top: 54px;
+    transform: translateX(-50%);
 
     & > p {
       word-break: break-all;
