--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -100,9 +100,12 @@
   }
 
   &.add-contact {
+    top: 50%;
+    left: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transform: translate(-50%, -50%);
 
     & > form {
       width: 100%;
