--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
   --border-color: rgba(24, 13, 13, 0.08);
   --light-border-color: rgba(0, 0, 0, 0.08);
   --info-message-color: #FFF8DE;
+  --shaded-color: #4e6e8e;
   --info-message-text-color: #AA935D;
   --copyblock-color: rgba(0, 0, 0, 0.04);
   --input-color: rgba(0, 0, 0, 0.02);
