--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -43,7 +43,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-    color: var(--hints-color);
+    color: var(--shaded-color);
     text-align: center;
   }
 }
