--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,7 @@
 }
 
 body.dark {
+  --input-border-focus: rgba(255, 255, 255, 0.2);
   --light-bg-color: #fff;
   --button-text-color: #1D2039;
   --modal-bg-color: #1D2039;
@@ -196,6 +197,17 @@ h2 {
 }
 
 .hint {
+  &-question-mark {
+    width: 20px;
+    height: 20px;
+    margin-left: 20px;
+    color: var(--button-text-color);
+    font-size: var(--sm-font-size);
+    background-color: var(--input-border-focus);
+    border: none;
+    border-radius: 10px;
+  }
+
   &-unlocked {
     position: absolute;
     z-index: 10000;
