--- a/src/index.scss
+++ b/src/index.scss
@@ -106,6 +106,7 @@ body, html {
 
 p {
   margin-top: 0;
+  color: var(--dark-color);
 }
 
 a {
@@ -120,6 +121,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
+  color: var(--dark-color);
 }
 
 input {
@@ -158,6 +160,8 @@ button {
 }
 
 .btn-tr {
+  margin-top: 0;
+
   &:hover {
     background-color: var(--border-color) !important;
   }
