--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -86,6 +86,7 @@
       display: none;
       max-width: 180px;
       margin: 0;
+      overflow: hidden;
       font-size: var(--md-font-size);
     }
   }
