--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -160,8 +160,8 @@
   }
 
   &.wallet {
-    top: 16px;
-    right: 16px;
+    top: 0;
+    right: 0;
     width: 100%;
 
     .wallet-qr {
@@ -474,7 +474,8 @@ body.dark {
     max-width: 505px;
 
     &.wallet {
-      // left: calc(100% - 16px);
+      top: 16px;
+      right: 16px;
 
       .wallet-qr {
         display: block;
@@ -482,8 +483,7 @@ body.dark {
 
       & > .wallet-buttons {
         & > button {
-          justify-content: space-between;
-          width: auto;
+          width: 200px;
           height: 35px;
           margin-left: 0;
           padding: 5px 10px;
