--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -44,7 +44,7 @@
 
 .modal {
   position: absolute;
-  top: 50%;
+  // top: 50%;
   z-index: 3000;
   width: 100%;
   max-width: 100vw;
@@ -198,7 +198,7 @@
       color: var(--dark-color);
       font-weight: var(--bold-font-weight);
       font-size: var(--large-font-size);
-      
+
       & > p {
         max-width: 250px;
         margin-bottom: 0;
@@ -546,9 +546,12 @@ body.dark {
 
 .modal-container {
   &.center {
-    display: flex;
-    // position: fixed;
-    align-items: center;
-    justify-content: center;
+    .modal-wrapper {
+      top: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
