add: confirmation count through web3 provider chore: refactor

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -403,6 +403,13 @@
     }
   }
 
+  &-confirmations {
+    margin: 0 10px;
+    > span {
+      color: var(--hints-color)
+    }
+  }
+
   &-right {
     display: flex;
     align-items: center;
