--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -283,6 +283,7 @@
 
   &-hash {
     margin-top: 18px;
+    margin-bottom: 10px;
     color: var(--dark-color);
     font-size: var(--sm-font-size);
 
@@ -294,7 +295,7 @@
 
   &-back {
     position: absolute;
-    left: 20px;
+    left: 30px;
     width: 44px;
     height: 44px;
     background: url(../../images/arrow-back.svg);
