--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -368,8 +368,8 @@
   &-wrapper {
     position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-flow: row nowrap;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     padding: 27px;
@@ -413,38 +413,36 @@
   &-right {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 100%;
     max-width: 162px;
     margin-left: 54px;
 
-    & > .contact-edit-wrapper {
-      position: absolute;
-      top: 50%;
-      right: 22px;
-      display: flex;
-      transform: translateY(-50%);
+  }
+}
 
-      .contact-manage {
-        width: 200px;
-        height: 60px;
-        padding-top: 10px;
-        color: var(--links-color);
-        text-align: center;
-        border: 1px solid var(--light-border-color);
+.contact-edit-wrapper {
+  right: 22px;
+  display: flex;
 
-        &-copy {
-          width: 100%;
-          height: 30px;
-          color: var(--dark-color);
-          background-color: var(--transparent);
-          border: none;
-          border-top: 1px solid var(--border-color);
+  .contact-manage {
+    width: 200px;
+    color: var(--links-color);
+    text-align: center;
+    border: 1px solid var(--light-border-color);
 
-          &:hover {
-            background-color: var(--border-color);
-          }
-        }
+    &-copy {
+      display: block;
+      width: 100%;
+      padding: 5px;
+      color: var(--dark-color);
+      font-size: var(--sm-font-size);
+      background-color: var(--transparent);
+      border: none;
+      border-top: 1px solid var(--border-color);
+
+      &:hover {
+        background-color: var(--border-color);
       }
     }
   }
@@ -498,11 +496,6 @@
   }
 
   .transaction-history {
-    &-wrapper {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  
     &-hash {
       margin-bottom: 0;
       margin-left: 10px;
