--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -281,9 +281,13 @@
     border-radius: 5px;
   }
 
+  &-hint {
+    word-break: break-all;
+  }
+
   &-hash {
     margin-top: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: var(--dark-color);
     font-size: var(--sm-font-size);
 
@@ -311,10 +315,15 @@
   }
 
   &-fee {
-    margin-top: 25px;
+    margin-bottom: 0;
     color: var(--dark-color);
     font-size: var(--sm-font-size);
     text-align: center;
+
+    &-wrapper {
+      height: 20px;
+      margin-top: 10px;
+    }
 
     & > span {
       color: var(--hints-color);
@@ -371,7 +380,7 @@
     width: 100%;
     height: 100%;
     max-height: 55px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 0 15px;
     border: 1px solid var(--border-color);
     border-radius: 4px;
@@ -401,14 +410,13 @@
 
         & .custom-selector {
           &.short {
-            max-width: 60px;
+            max-width: 60px;          
           }
           
           & .custom-selector-title {
             margin-left: 0;
 
             &.short {
-              max-width: 90px;
               margin-right: 0;
             }
 
@@ -572,7 +580,7 @@ p.transaction-hash {
     }
   
     &-fee {
-      margin-top: 22px;
+      margin-top: 0;
       color: var(--dark-color);
       font-size: var(--sm-font-size);
       text-align: center;
@@ -630,7 +638,6 @@ p.transaction-hash {
         }
 
         .custom-selector.contacts {
-          max-width: 120px;
           margin-top: 20px;
 
           & > .custom-selector-title {
