--- a/src/index.scss
+++ b/src/index.scss
@@ -267,8 +267,8 @@ h2 {
     position: absolute;
     top: -20px;
     right: 20px;
-    // min-width: 120px;
-    // min-height: 40px;
+    min-width: 120px;
+    min-height: 30px;
     padding: 5px 10px;
     color: var(--dark-color);
     background-color: var(--modal-bg-color);
